[NIFI-11167] Replaced the use of Java 11 feature List.of to allow for backward compatibility. Renamed method name, refactored a constructor and fixed various formatting issues (e.g. new lines and having the correct value for the left hand value of an equals).